samples/invalid/syntax/unbalanced_delimiters.g
language g0
bad = ([)]
